--- a/package.json
+++ b/package.json
@@ -1,53 +1,26 @@
 {
-  
+  "name": "projectgraphql",
+  "author": "",
+  "license": "ISC",  
   "version": "1.0.0",
-  
-  "description": "",
-  
+  "description": "Learning full-stack development",
   "main": "index.js",
-  
   "scripts": {
-  
-    
-  "start": "node server/index.js",
-  
-    
-  "dev": "nodemon server/index.js"
-  
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js"
   },
-  
   "dependencies": {
-  
-    
-  "colors": "^1.4.0",
-  
-    
-  "cors": "^2.8.5",
-  
-    
-  "express": "^4.18.2",
-  
-    
-  "express-graphql": "^0.12.0",
-  
-    
-  "graphiql": "^2.4.5",
-  
-    
-  "graphql": "^15.8.0",
-  
-    
-  "mongoose": "^7.2.1"
-  
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphiql": "^2.4.5",
+    "graphql": "^15.8.0",
+    "mongoose": "^7.2.1"
   },
-  
+
   "devDependencies": {
-  
-    
-  "dotenv": "^16.0.3",
-  
-    
-  "nodemon": "^2.0.22"
-  
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.22"
   }
 }
